# kg-doc-parser

./: .env.example  .gitignore  QUICKSTART.md  README.md  agent.md  conftest.py  pyproject.toml  pytest.ini  req.txt  workflow_ingest_demo_harness_failure_followup.md  workflow_ingest_layerwise_proposal.md  workflow_ingest_resolver_orchestration.md
kg_doc_parser/: __init__.py  cast_hinting.py  document_ingester_logger.py  models.py  ocr.py  pdf2png.py  semantic_document_splitting_layerwise_edits.py
kg_doc_parser/utils/: bounded_threadpool_executor.py  file_loaders.py  version_chaining.py
kg_doc_parser/workflow_ingest/: __init__.py  cache.py  cli.py  demo_harness.py  handlers.py  models.py  ocr_pipeline.py  parsing.py  probe.py  runners.py  smoke_assets.py
scripts/: bootstrap-dev.ps1  bootstrap-dev.sh  generate_workflow_ingest_ocr_smoke_assets.py  run_workflow_ingest_demo.py
src/: document_ingester_logger.py  models.py  ocr.py  pdf2png.py  semantic_document_splitting_layerwise_edits.py  text_processing_utils.py
src/utils/: version_chaining.py
src/workflow_ingest/: __init__.py  _kogwistar.py  adapters.py  cache.py  cli.py  clients.py  demo_harness.py  design.py  handlers.py  models.py  ocr_pipeline.py  page_index.py  parser_core.py  parsing.py  probe.py  providers.py  runners.py  semantics.py  service.py
tests/: _kogwistar_test_helpers.py  reproduce_issue.py  test_ocr.py  test_ocr_mcp_client.py  test_packaging_imports.py  test_pdf_preprocess.py  test_semantic_layerwise_doc_parsing.py  test_workflow_ingest_backends_ci_full.py  test_workflow_ingest_cli.py  test_workflow_ingest_contracts.py  test_workflow_ingest_conversation_graph.py  test_workflow_ingest_demo_harness.py  test_workflow_ingest_layerwise_parser.py  test_workflow_ingest_ocr_pipeline.py  test_workflow_ingest_page_index_pipeline.py  test_workflow_ingest_parsing_api.py  test_workflow_ingest_provider_adapters.py  test_workflow_ingest_resolver_invariants.py  test_workflow_ingest_scaffold.py  test_workflow_ingest_server_e2e.py  test_workflwo_Ingest_ocr_pipeline.workflow.md
tests/fixtures/page_index/: sample_page_index.md  (+1 more)
