[tool.poetry]
name = "graph-knowledge-doc-parser"
version = "0.1.0"
description = "doc parser using llm driven engine with graph knowledge awareness"
authors = ["humblemat810 <67593116+humblemat810@users.noreply.github.com>"]
readme = "README.md"
packages = [
    { include = "kg_doc_parser" }
]
homepage = "https://github.com/humblemat810/kg_doc_parser"
repository = "https://github.com/humblemat810/kg_doc_parser"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Topic :: Text Processing :: General",
]

[tool.poetry.dependencies]
python = "^3.13"
pydantic = "^2.12.5"
joblib = "^1.5.3"
pdf2image = "^1.17.0"
pypdf = "^6.5.0"
pathspec = "^0.12.1"
pikepdf = "^10.1.0"
langchain-core = "^1.2.5"
langchain-google-genai = "^4.1.2"
pydantic-extension = "^0.0.7"
rapidfuzz = "^3.14.3"
mcp = "^1.25.0"
kogwistar = "^0.2.0"
fastmcp = "^3.2.3"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"

[tool.poetry.scripts]
workflow-ingest = "kg_doc_parser.workflow_ingest.cli:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

